[d3d9] Move some YUV helpers to common and cleanup YUY2 shader

--- a/tests/d3d9/meson.build
+++ b/tests/d3d9/meson.build
@@ -4,3 +4,4 @@ executable('d3d9-clear'+exe_ext,  files('test_d3d9_clear.cpp'),  dependencies : 
 executable('d3d9-buffer'+exe_ext,  files('test_d3d9_buffer.cpp'),  dependencies : test_d3d9_deps, install : true, gui_app : true, override_options: ['cpp_std='+dxvk_cpp_std])
 executable('d3d9-triangle'+exe_ext,  files('test_d3d9_triangle.cpp'),  dependencies : test_d3d9_deps, install : true, gui_app : true, override_options: ['cpp_std='+dxvk_cpp_std])
 executable('d3d9-l6v5u5'+exe_ext,  files('test_d3d9_l6v5u5.cpp'),  dependencies : test_d3d9_deps, install : true, gui_app : true, override_options: ['cpp_std='+dxvk_cpp_std])
+executable('d3d9-nv12'+exe_ext,  files('test_d3d9_nv12.cpp'),  dependencies : test_d3d9_deps, install : true, gui_app : true, override_options: ['cpp_std='+dxvk_cpp_std])
