--- a/src/d3d9/meson.build
+++ b/src/d3d9/meson.build
@@ -6,7 +6,8 @@ d3d9_shaders = files([
   'shaders/d3d9_convert_yuy2_uyvy.comp',
   'shaders/d3d9_convert_l6v5u5.comp',
   'shaders/d3d9_convert_x8l8v8u8.comp',
-  'shaders/d3d9_convert_a2w10v10u10.comp'
+  'shaders/d3d9_convert_a2w10v10u10.comp',
+  'shaders/d3d9_convert_nv12.comp'
 ])
 
 d3d9_src = [
